--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,10 +1,7 @@
 name: 🚀 Deploy website on push
 on: 
   push:
-    branches: [ master ]
-defaults:
-  run:
-    working-directory: 'src/**'
+    branches: [ main ]
 jobs:
   web-deploy:
     name: 🎉 Deploy
@@ -21,4 +18,3 @@ jobs:
         port: 21
         password: ${{ secrets.PROD_FTP }}
         server-dir: /
-        local-dir: ./dist/
