--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,5 +20,5 @@ jobs:
         username: epiz_29045278
         port: 21
         password: ${{ secrets.PROD_FTP }}
-        server-dir: /
+        server-dir: /assape1410.epizy.com
         local-dir: ./
