--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,7 +4,7 @@ on:
     branches: [ main ]
 defaults:
   run:
-    working-directory: '/'
+    working-directory: '/**'
 jobs:
   web-deploy:
     name: 🎉 Deploy
